src/objects/AECOM_team__c.object
<CustomObject>
    <description>The AECOM employees who are associated with a client, contact, opportunity, or community event.</description>
    <fields>
        <fullName>Account_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Click to return to the Account Plan</inlineHelpText>
        <label>Account Plan</label>
        <referenceTo>SFDC_Acct_Plan__c</referenceTo>
        <relationshipLabel>Account Plan Team</relationshipLabel>
        <relationshipName>AECOM_Team7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Client with which the employee is associated.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>AECOM Team</relationshipLabel>
        <relationshipName>AECOM_Team1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Line__c</fullName>
        <formula>Employee__r.Business_Line__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Campaign to which this team member is related</inlineHelpText>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>AECOM Team</relationshipLabel>
        <relationshipName>AECOM_Team</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Community_Involvement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the Community Involvement Event</description>
        <label>Community Involvement</label>
        <referenceTo>Community_Involvement__c</referenceTo>
        <relationshipLabel>AECOM Team</relationshipLabel>
        <relationshipName>AECOM_Team</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer contact with whom the employee is associated.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>AECOM Team</relationshipLabel>
        <relationshipName>AECOM_Team1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Employee__r.Email__c</formula>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>AECOM employee who owns the relationship.</description>
        <label>Employee</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AECOM_Employee__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AECOM_Employee__c</referenceTo>
        <relationshipLabel>AECOM Team</relationshipLabel>
        <relationshipName>AECOM_Team</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expertise_Index__c</fullName>
        <defaultValue>IF ( $User.State = &quot;X&quot;, &quot;&quot;, 
&apos;http://uspsw2sqr001/ReportServer/Pages/ReportViewer.aspx?%2fFrontOffice%2fEmpSkillsReport&amp;rs:Command=Render&apos;
)</defaultValue>
        <inlineHelpText>Click to go to the skills search</inlineHelpText>
        <label>Expertise Index</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Form</label>
        <referenceTo>Forms__c</referenceTo>
        <relationshipLabel>AECOM Team</relationshipLabel>
        <relationshipName>AECOM_Team</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>Employee__r.First_Name__c + &quot; &quot; +  Employee__r.Last_Name__c</formula>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Import_Source__c</fullName>
        <label>Import Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InActive_Date__c</fullName>
        <label>InActive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Office__c</fullName>
        <formula>Employee__r.Office_City__c + &quot; &quot; + Employee__r.Office_State__c  +  &quot; &quot; + Employee__r.Office_Country__c</formula>
        <label>Office</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Opportunity with which the employee is associated.</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>AECOM Team</relationshipLabel>
        <relationshipName>AECOM_Team1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>Employee__r.Phone__c</formula>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_Instructions__c</fullName>
        <description>instructions for selecting the correct role</description>
        <formula>&quot;AECOM contact – Priority 1: My priority client/prospect, and/or a contact that I have a strong relationship with. &quot; +
&quot;AECOM contact – Priority 2: A client/prospect with whom I have a fair relationship; and/or an individual that I am interested in developing a stronger relationship with. This contact is not a key work giver.&quot; +

&quot;AECOM contact – Priority 3: A personal influencer or collaborator, but not a direct client/prospect.&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Instructions for choosing a role</inlineHelpText>
        <label>Role Instructions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_Responsibility__c</fullName>
        <label>Role/Responsibility</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>Role played by the employee in the relationship with Project, Form, Client, Contact or Opportunity.</description>
        <inlineHelpText>Select the Role played by the AECOM employee with relation to this Account, Contact or Opportunity.</inlineHelpText>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Account Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional CRM Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AECOM Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AECOM Contact – Priority 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AECOM Contact – Priority 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AECOM Contact – Priority 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD Lead - Building Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD Lead - CAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD Lead - Construction Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD Lead - Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD Lead - Environment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD Lead - Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD Lead – PCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD Lead - PDD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD Lead - Program Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD Lead - SPG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD Lead - Transportation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD Lead - Water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BTS Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Account Leader (inform)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Country Business Line Leader (Recommend)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Country Managing Director (Approve)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA Chief Exec (Decision, see DOA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global Exec (Decision, see DOA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interview Coach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Counsel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Segment Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBC - Bid Specialist</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>TEXT(Employee__r.Status__c)</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <label>AECOM Team</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Employee__c</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Role__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>TEAM-{0}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AECOM Team</pluralLabel>
    <recordTypes>
        <fullName>AECOM_Team_Account</fullName>
        <active>true</active>
        <description>For adding team members to an Account record</description>
        <label>AECOM Team - Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>AECOM_Team_Account_Plan</fullName>
        <active>false</active>
        <description>For adding team members to an Account Plan</description>
        <label>AECOM Team - Account Plan</label>
    </recordTypes>
    <recordTypes>
        <fullName>AECOM_Team_Campaign</fullName>
        <active>true</active>
        <description>For adding team members to a Campaign</description>
        <label>AECOM Team - Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>AECOM_Team_Community_Involvement</fullName>
        <active>false</active>
        <description>Team associated with a community involvement event</description>
        <label>AECOM Team - Community Involvement</label>
    </recordTypes>
    <recordTypes>
        <fullName>AECOM_Team_Contact</fullName>
        <active>true</active>
        <description>For adding team members to Contact records</description>
        <label>AECOM Team - Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>AECOM_Team_MEFO205_PreQualification</fullName>
        <active>false</active>
        <description>For Middle East Go-NoGo Assessment Form</description>
        <label>AECOM Team - MEFO205 PreQualification</label>
    </recordTypes>
    <recordTypes>
        <fullName>AECOM_Team_Opportunity</fullName>
        <active>true</active>
        <description>For adding team members to Opportunities</description>
        <label>AECOM Team - Opportunity</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>